fixed display issue for FB on tablets

--- a/mobile.css
+++ b/mobile.css
@@ -39,6 +39,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    text-align: center;
     width: auto;
     
     margin: 50px auto;
